<resources>
    <string name="app_name">SLS Wellbeing</string>
    <string name="general_saved">Saved</string>
    <string name="general_save">Save</string>
    <string name="general_cancel">Cancel</string>

    <string name="button_Tasks_To_Do">Tasks To Do</string>
    <string name="button_need_help">Get Help</string>
    <string name="button_home_page">Home Page</string>
    <string name="button_mood_tracker">Mood Tracker</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="toggle_password">Toggle Password Visibility</string>

    <string name="mood_tracker_page_heading">Mood Tracker</string>
    <string name="mood_tracker_rating_prompt">How are you feeling today?</string>
    <string name="mood_tracker_neutral_icon_content_description">A Neutral Face Icon</string>
    <string name="mood_tracker_happy_icon_content_description">A Happy Face Icon</string>
    <string name="mood_tracker_sad_icon_content_description">A Sad Face Icon</string>
    <string name="mood_tracker_chart_title">Recent Moods</string>
    <string name="mood_tracker_history_title">History</string>
    <string name="mood_tracker_edit_mood_title">Update your mood</string>
    <string name="mood_tracker_add_notes">Add some notes about how you\'re feeling</string>

    <string name="button_work">Work</string>
    <string name="button_learning">Learning</string>
    <string name="button_mental">Mental</string>
    <string name="help_page_heading">Need Help</string>
    <string name="button_mentor">Mentor\nName: Samantha</string>
    <string name="home_page_header">Kia Ora</string>
    <string name="tasks_page_header">Tasks</string>

    <string name="help_no_mentor_label">No mentor yet</string>
    <string name="help_mentor_label">Mentor</string>
    <string name="help_phone_button">Call</string>
    <string name="help_sms_button">SMS</string>
    <string name="help_email_button">Email</string>
    <string name="help_send_email_subject">Request for support</string>
    <string name="help_send_email_body">I could really use some help now.\n\nThanks</string>


    <string name="error_feature_not_available">Feature not available</string>
    <string name="error_incorrect_login">Email/Password Incorrect</string>
    <string name="mood_tracker_rating_prompt_after">Thank you.</string>
    <string name="action_logout">Logout</string>
    <string name="tasks_page_empty_tasklist">There is nothing to display.</string>
    <string name="logo_content_description">Social labour supply company logo</string>
    <string name="button_courses">Courses</string>
    <string name="button_learning_resources">Resources</string>
    <string name="learning_page_heading">Learning</string>
    <string name="courses_page_header">Courses</string>
    <string name="courses_page_empty_courselist">You are not enrolled in any courses</string>
    <string name="video_of_the_day_header">Video of the Day</string>
    <string name="courses_list_header">Your Courses</string>
    <string name="button_go_to_course">Go To Course</string>
    <string name="button_need_mentor">Need Mentor</string>
    <string name="button_pastoral_support">Pastoral Support</string>
    <string name="button_other_resources">Other Resources</string>
    <string name="mental_page_header">Mental Health</string>
    <string name="learning_resource_page_heading">Resources</string>
    <string name="mental_health_resource_page_heading">Other</string>
    <string name="need_help_resource_page_heading">Other</string>
    <string name="button_other">Other</string>
    <string name="Mentor_Page_Heading">Mentor</string>
    <string name="your_mentor_is">Your mentor is:</string>
    <string name="Mentor_Messages">messages: \nYou have no new messages available</string>
    <string name="reschedule_Mentor">Reschedule</string>
    <string name="Text_View_Date_Mentor">Catch Up Date</string>
</resources>