<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textViewHomePageTitle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="32sp"
            android:autoSizeStepGranularity="2sp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/home_page_header"
            android:textColor="?attr/textAppearanceHeadline1"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/imageViewHomePageLogo"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHomePageLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/centerVerticalGuideline"
            tools:text="Kia Ora" />

        <Button
            android:id="@+id/button_tasks"
            android:layout_width="152dp"
            android:layout_height="71dp"
            android:text="@string/button_Tasks_To_Do"
            app:layout_constraintBottom_toTopOf="@+id/button_help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_moodTracker" />

        <Button
            android:id="@+id/button_moodTracker"
            android:layout_width="152dp"
            android:layout_height="71dp"
            android:text="@string/button_mood_tracker"
            app:layout_constraintBottom_toTopOf="@+id/button_tasks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHomePageTitle" />

        <ImageView
            android:id="@+id/imageViewHomePageLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/centerVerticalGuideline"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sls_logo"
            android:contentDescription="@string/logo_content_description" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/button_need_help"
            android:text="@string/button_need_help"
            app:icon="@drawable/ic_lifebuoy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>